--- a/styles/reset.css
+++ b/styles/reset.css
@@ -13,7 +13,7 @@ body {
 }
 
 .wrapper {
-  width: 90%;
+  width: 98%;
   margin-left: auto;
   margin-right: auto;
 }
